--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,26 @@
 .App{
-
+    text-align: center;
+}
+.Grid,.Tile{
+    position: relative;
+    display: inline-block;
 }
 .Grid{
-
+    margin-top:5vmax;
+    height: 40vmax;
+    width: 40vmax;
+    text-align: left;
+    background-color: #bbada0;
+    border-radius: 5px;
 }
-.Tile{
-
+.tile{
+    background-color: rgba(238, 228, 218, 0.35);
+    display: inline-block;
+    width: 8.4vmax;
+    height: 8.25vmax;
+    margin: 1.25vmax 0 0 1.25vmax;
+    border-radius: 3px;
+    position: relative;
+    text-align: center;
+    color: #766e64;
 }
